--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -93,6 +93,7 @@
                         android:layout_height="wrap_content"
                         android:autofillHints=""
                         android:ems="10"
+                        android:enabled="false"
                         android:inputType="textLongMessage|textPersonName"
                         android:labelFor="@id/TextView8"
                         android:paddingLeft="15dp"
@@ -124,6 +125,7 @@
                         android:layout_height="wrap_content"
                         android:autofillHints=""
                         android:ems="10"
+                        android:enabled="false"
                         android:inputType="textLongMessage|textPersonName"
                         android:labelFor="@id/TextView8"
                         android:paddingLeft="15dp"
