--- a/app/src/main/res/layout/activity_arrange_shift.xml
+++ b/app/src/main/res/layout/activity_arrange_shift.xml
@@ -76,7 +76,7 @@
                         android:textSize="15sp" />
 
                     <Spinner
-                        android:id="@+id/ddlRoomType"
+                        android:id="@+id/ddlStaffName"
                         android:layout_width="350dp"
                         android:layout_height="wrap_content"
                         android:background="@android:drawable/btn_dropdown"
@@ -90,16 +90,122 @@
                         android:paddingTop="15dp"
                         android:paddingRight="15dp"
                         android:paddingBottom="15dp"
-                        android:text="Time Range"
+                        android:text="Monday"
                         android:textSize="15sp" />
 
                     <Spinner
-                        android:id="@+id/ddlTimeRange"
+                        android:id="@+id/ddlShift1"
                         android:layout_width="350dp"
                         android:layout_height="wrap_content"
                         android:background="@android:drawable/btn_dropdown"
                         android:spinnerMode="dropdown" />
 
+                    <TextView
+                        android:id="@+id/textView10"
+                        android:layout_width="380dp"
+                        android:layout_height="wrap_content"
+                        android:paddingLeft="15dp"
+                        android:paddingTop="15dp"
+                        android:paddingRight="15dp"
+                        android:paddingBottom="15dp"
+                        android:text="Tuesday"
+                        android:textSize="15sp" />
+
+                    <Spinner
+                        android:id="@+id/ddlShift2"
+                        android:layout_width="350dp"
+                        android:layout_height="wrap_content"
+                        android:background="@android:drawable/btn_dropdown"
+                        android:spinnerMode="dropdown" />
+                    <TextView
+                        android:id="@+id/textView11"
+                        android:layout_width="380dp"
+                        android:layout_height="wrap_content"
+                        android:paddingLeft="15dp"
+                        android:paddingTop="15dp"
+                        android:paddingRight="15dp"
+                        android:paddingBottom="15dp"
+                        android:text="Wednesday"
+                        android:textSize="15sp" />
+
+                    <Spinner
+                        android:id="@+id/ddlShift3"
+                        android:layout_width="350dp"
+                        android:layout_height="wrap_content"
+                        android:background="@android:drawable/btn_dropdown"
+                        android:spinnerMode="dropdown" />
+
+                    <TextView
+                        android:id="@+id/textView12"
+                        android:layout_width="380dp"
+                        android:layout_height="wrap_content"
+                        android:paddingLeft="15dp"
+                        android:paddingTop="15dp"
+                        android:paddingRight="15dp"
+                        android:paddingBottom="15dp"
+                        android:text="Thursday"
+                        android:textSize="15sp" />
+
+                    <Spinner
+                        android:id="@+id/ddlShift4"
+                        android:layout_width="350dp"
+                        android:layout_height="wrap_content"
+                        android:background="@android:drawable/btn_dropdown"
+                        android:spinnerMode="dropdown" />
+
+                    <TextView
+                        android:id="@+id/textView13"
+                        android:layout_width="380dp"
+                        android:layout_height="wrap_content"
+                        android:paddingLeft="15dp"
+                        android:paddingTop="15dp"
+                        android:paddingRight="15dp"
+                        android:paddingBottom="15dp"
+                        android:text="Friday"
+                        android:textSize="15sp" />
+
+                    <Spinner
+                        android:id="@+id/ddlShift5"
+                        android:layout_width="350dp"
+                        android:layout_height="wrap_content"
+                        android:background="@android:drawable/btn_dropdown"
+                        android:spinnerMode="dropdown" />
+
+                    <TextView
+                        android:id="@+id/textView14"
+                        android:layout_width="380dp"
+                        android:layout_height="wrap_content"
+                        android:paddingLeft="15dp"
+                        android:paddingTop="15dp"
+                        android:paddingRight="15dp"
+                        android:paddingBottom="15dp"
+                        android:text="Saturday"
+                        android:textSize="15sp" />
+
+                    <Spinner
+                        android:id="@+id/ddlShift6"
+                        android:layout_width="350dp"
+                        android:layout_height="wrap_content"
+                        android:background="@android:drawable/btn_dropdown"
+                        android:spinnerMode="dropdown" />
+
+                    <TextView
+                        android:id="@+id/textView15"
+                        android:layout_width="380dp"
+                        android:layout_height="wrap_content"
+                        android:paddingLeft="15dp"
+                        android:paddingTop="15dp"
+                        android:paddingRight="15dp"
+                        android:paddingBottom="15dp"
+                        android:text="Sunday"
+                        android:textSize="15sp" />
+
+                    <Spinner
+                        android:id="@+id/ddlShift7"
+                        android:layout_width="350dp"
+                        android:layout_height="wrap_content"
+                        android:background="@android:drawable/btn_dropdown"
+                        android:spinnerMode="dropdown" />
 
                 </LinearLayout>
 
