--- a/app/src/main/res/layout/activity_check_in_details.xml
+++ b/app/src/main/res/layout/activity_check_in_details.xml
@@ -58,22 +58,7 @@
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
-                    android:layout_height="550dp">
-
-                   <!-- <TextView
-                        android:id="@+id/txtBookingID"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="30dp"
-                        android:layout_marginTop="30dp"
-                        android:paddingLeft="15sp"
-                        android:paddingTop="15sp"
-                        android:paddingRight="15sp"
-                        android:paddingBottom="15sp"
-                        android:textSize="18sp"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        tools:text="Order ID" />-->
+                    android:layout_height="580dp">
 
                     <TextView
                         android:id="@+id/txtCustName"
@@ -181,6 +166,21 @@
                         tools:text="Room No." />
 
                     <TextView
+                        android:id="@+id/txtStaffName"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="30dp"
+                        android:layout_marginTop="10dp"
+                        android:paddingLeft="15sp"
+                        android:paddingTop="15sp"
+                        android:paddingRight="15sp"
+                        android:paddingBottom="15sp"
+                        android:textSize="18sp"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/txtRoomNum"
+                        tools:text="Staff Name" />
+
+                    <TextView
                         android:id="@+id/txtRoomStatus"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -193,8 +193,9 @@
                         android:textColor="#DD272D"
                         android:textSize="18sp"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/txtRoomNum"
+                        app:layout_constraintTop_toBottomOf="@+id/txtStaffName"
                         tools:text="Room Status" />
+
 
 
 
