Commited by caiying 1804

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -99,6 +99,6 @@
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
         app:headerLayout="@layout/nav_header" 
-        app:menu="@menu/nav_menu"/>
+        app:menu="@menu/login_menu"/>
 
 </androidx.drawerlayout.widget.DrawerLayout>
